[package]
name = "expo_push_notification_client"
version = "1.0.4"
edition = "2021"
readme = "README.md"
authors = ["katayama8000 <https://github.com/katayama8000>"]
description = "Expo Push Notification Client for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/katayama8000/expo-push-notification-client"
homepage = "https://github.com/katayama8000/expo-push-notification-client/blob/main/README.md"
keywords = ["react", "native", "expo", "push", "notifications"]
categories = ["api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
async-compression = { version = "0.4.24", features = ["gzip", "tokio"] }
regex = "1.11.1"
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "gzip",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.13.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util"] }

[dev-dependencies]
anyhow = "1.0.98"
mockito = "1.7.0"
tokio = { version = "1.45.0", features = ["full"] }
