[package]
name = "expo_push_notification_client"
version = "2.0.0"
edition = "2021"
readme = "README.md"
authors = ["katayama8000 <https://github.com/katayama8000>"]
description = "Expo Push Notification Client for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/katayama8000/expo-push-notification-client"
homepage = "https://github.com/katayama8000/expo-push-notification-client/blob/main/README.md"
keywords = ["react", "native", "expo", "push", "notifications"]
categories = ["api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
async-compression = { version = "0.4.34", features = ["gzip", "tokio"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "gzip",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util"] }

[dev-dependencies]
anyhow = "1.0.100"
mockito = "1.7.1"
tokio = { version = "1.45.0", features = ["full"] }
