[package]
name = "expo_server_sdk"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["katayama8000 <https://github.com/katayama8000>"]
description = "Expo Server SDK for Rust"
license = "MIT"
repository = "https://github.com/katayama8000/expo-server-sdk-rust"
homepage = "https://github.com/katayama8000/expo-server-sdk-rust/blob/main/README.md"
keywords = ["expo","web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.108"
