[package]
name = "expo_server_sdk"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["katayama8000 <https://github.com/katayama8000>"]
description = "Expo Server SDK for Rust"
license = "MIT"
repository = "https://github.com/katayama8000/expo-server-sdk-rust"
homepage = "https://github.com/katayama8000/expo-server-sdk-rust/blob/main/README.md"
keywords = ["expo","web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockito = "1.2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version ="1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_with = "3.4.0"
tokio = "1.35.0"
